<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">澜泰营销工具</string>
    <string name="shuoming">每一辆汽车它时刻忍受着酸雨、虫尸、紫外线、钢圈老化、发动机线路老化、前挡风玻璃老化、刮擦碰等引起的"岁月"问题。</string>
    <string name="Acidrain">1.\n\n酸雨</string>
    <string name="insectcorpse">2.\n\n虫尸</string>
    <string name="tirerims">3.\n\n轮胎\n钢圈</string>
    <string name="UV">4.\n\n紫外线</string>
    <string name="frontglass">5.\n\n前挡\n玻璃</string>
    <string name="Scratches">6.\n\n划痕</string>
    <string name="Engine">7.\n\n发动机</string>
    <string name="video">video</string>
    <string name="order">order</string>
    <string name="chepaititle">选择您的车牌</string>
    <string name="btnreturn">返回</string>
    <string name="selects">selects</string>
    <string name="seven">seven</string>
    <string name="introduct">澜泰简介</string>
    <string name="solve">解决之道</string>
    <string name="welcome">welcome</string>
    <string name="world">world</string>
    <string name="solveLunTai">轮胎</string>
    <string name="solveBoLi">玻璃</string>
    <string name="wenti">问题重现</string>
    <string name="jiejue1">解决方案</string>
    <string name="jiejue2">产片对比</string>
    <string name="luntai1">轮胎解决方案1</string>
    <string name="luntai2">轮胎解决方案2</string>
    <string name="luntai3">轮胎解决方案3</string>
    <string name="luntai4">轮胎解决方案4</string>
    <string name="luntai5">轮胎问题重现</string>
    <string name="boli1">玻璃问题重现</string>
    <string name="boli2">玻璃问题解决方案1</string>
    <string name="boli3">玻璃问题解决方案2</string>
    <string name="boli4">玻璃问题解决方案3</string>
    <string name="boli5">玻璃问题解决方案4</string>
    <string name="test">Test</string>
    <string name="solveLT">轮胎</string>
    <string name="solveBL">玻璃</string>
    <string name="black">#000000</string>
    <string name="home">home</string>
    <string name="solveCS">虫尸</string>
    <string name="solveFDJ">发动机</string>
    <string name="solveZWX">紫外线</string>
    <string name="solveSY">酸雨</string>
    <string name="solveHH">划痕</string>
    <string name="cswt">夏季夜晚在高速或郊区道路，引起前灯光亮吸引，大量飞虫会聚集在道路上， 虫尸附着在车漆表面，经过一夜变得难以清理。部分极难清理的虫尸需要打磨才能清除。 另外，虫尸中酸性或碱性物质也会腐蚀车漆。</string>
    <string name="csjj1">漆面结晶镀膜</string>
    <string name="csjj2">漆面结晶镀膜在车漆表面形成6H硬度保护层，能有效防止虫尸中的酸性物质对原厂车漆的侵蚀，保持车漆长久亮丽如新。</string>
    <string name="csjj3">使用澜泰结晶镀膜后，虫尸只能附着在结晶层，不会影响车漆。结晶层表面更密致的分子结构，使得虫尸更易于清理。 极难清理的虫尸，需要打磨时，也不会影响车漆。</string>
    <string name="fdjwt">发动机日常使用留下的油污堆积起来，会附着在发动机周围的管路电线 之上，加剧线路老化，火花更可能点燃堆积的油污，引发发动机自燃的风险。</string>
    <string name="fdjjj1">发动机清洗、液发动机镀膜剂</string>
    <string name="fdjjj2">发动机镀膜可以有效防止污垢累积，保持发动机舱清洁，延缓电气线路老化，降低自燃风险。镀膜施工同时对发动机舱进行检查，及早发现隐患，大大提高用车安全。</string>
    <string name="fdjjj3">澜泰发动机镀膜能减缓发动机油污的堆积，隔绝油污对线路的腐蚀，延长管线的使用寿命，大大降低发动机自燃的风险。</string>
    <string name="zwxwt">日光中的紫外线会加速真皮中的皮脂流失，加剧真皮老化，造成真皮板结开裂。</string>
    <string name="zwxjj1">真皮清洗剂、真皮镀膜剂</string>
    <string name="zwxjj2">真皮镀膜可以帮助车辆真皮内饰有效抵御紫外线的侵蚀，防止出现褪色、板结、发硬等现象，延长真皮内饰使用寿命。</string>
    <string name="zwxjj3">澜泰真皮镀膜，可以部分阻隔紫外线对真皮损害，内含动物油脂以补充流失的皮脂。</string>
    <string name="sywt">酸雨过后，留在车漆表面的水珠形成透镜效应，聚焦阳光，造成表面问题升高， 加剧了酸性物质对车漆的侵蚀，留下不易清除的水渍，长期得不到正确护理会使车漆暗淡无光。</string>
    <string name="syjj1">漆面结晶镀膜</string>
    <string name="syjj2">漆面结晶镀膜在车漆表面形成6H硬度保护层，能有效防止酸雨对原厂车漆的侵蚀，保持车漆长久亮丽如新。</string>
    <string name="syjj3">澜泰结晶镀膜，完全阻隔了酸雨对车漆的侵蚀，镀膜层良好的泼水 性，使得雨后能积聚在车漆表面的水珠更少，大大减少透镜效应。</string>
    <string name="hhwt">行车过程中路面的砂石，靠边或停车时道边的绿化，洗车毛巾中所含的石英等等会再日常用车过程中在车 漆表面留下细小划痕。这些划痕只有通过对表面车漆的抛光才能消除。</string>
    <string name="hhjj1">漆面结晶镀膜</string>
    <string name="hhjj2">漆面结晶镀膜在车漆表面形成6H硬度保护层，能有效防止轻度刮擦和日常磨损对原厂车漆造成损害。</string>
    <string name="hhjj3">澜泰解决镀膜能在车漆表面形成硬度高达6H的结晶层，不易被划伤；需要抛光处理时，不会影响 车漆；抛光处理之后，只需要很少花费就可以在抛光处补充一层新的结晶层。</string>
    <string name="ltwt">在不加养护的情况下，日晒雨淋会使得本身较薄的轮胎壁变脆变硬， 降低胎壁所能承受的张力，在高速通过不平整的路面时，就有相当的爆胎风险。</string>
    <string name="ltjj1">轮胎镀膜可以保持橡胶弹性，延缓轮胎老化，隔绝外界侵蚀，延长使用寿命，同时降低爆胎风险，提高行车安全。</string>
    <string name="ltjj2">轮胎清洗剂</string>
    <string name="ltjj3">本产品采用独特的高分子活性成分，能迅速清洁轮胎表面的污垢和油渍，使轮胎清洁如新。</string>
    <string name="ltjj4">轮胎镀膜剂</string>
    <string name="ltjj5">最新配方。内含分子链活性修复成分，有效保持橡胶弹性，长期使用可增加轮胎的使用寿命及延缓老化，具有持久的光泽度，不易沾尘。不含有破坏轮胎性质的界面活性剂和溶剂。它可以在轮胎表面形成一种高韧度的保护膜，具有泼水、耐油、防污和超耐持久的特性。</string>
    <string name="ltjj6">轮毂翻新保养剂</string>
    <string name="ltjj7">最新配方。可彻底清除附着于轮毂的刹车粉尘，复杂的污垢，并形成保护膜，不易沾尘，使合金轮圈光亮如新。</string>
    <string name="ltjj8">使用澜泰轮胎镀膜，可以减缓胎壁的老化，保持胎壁韧性，降低爆胎风险。 镀膜还可以使胎壁不易沾染污渍和灰尘，整车显得更为整洁美观。</string>
    <string name="blwt">油污和砂石的磨损使得前挡玻璃表面变得粗糙，泼水性下降，雨刮片扫过，会留下明显的水痕，影响视线，增加行车风险。</string>
    <string name="bljj1">玻璃清洗剂、玻璃镀膜剂</string>
    <string name="bljj2">前挡玻璃镀膜能保护玻璃表面免受磨损，更易清洁，提供清晰视野，提高行车安全。</string>
    <string name="bljj3">澜泰玻璃镀膜能够填补玻璃磨损表面，提高泼水性，雨刮片扫过不易留下水痕，视线更清楚，行车也更安全。</string>
    <string name="solveyingdui">应对产品</string>
    <string name="solvetedian">产品特点</string>
    <string name="solveguocheng">施工过程</string>
    <string name="solveqmqian">产品处理前</string>
    <string name="solveqmhou">产品处理后</string>
    <string name="solveqmduibi">产品对比</string>
    <string name="dingdan">下订单</string>
    <string name="years">years</string>
    <string name="news">news</string>
    <string name="next">下一步</string>
    <string name="over">完成</string>
    <string name="yeartitle">选择您汽车的够买年份</string>
    <string name="cartitle">拍摄车况</string>
    <string name="newstitle">用户信息</string>
    <string name="text1">我的爱车购买于</string>
    <string name="text2">日</string>
    <string name="carnumber">车    号</string>
    <string name="phone">联系电话</string>
    <string name="qq">QQ/微信/Email</string>
    <string name="name">姓    名</string>
    <string name="birthday">生    日</string>
    <string name="photo">拍摄车况</string>
    <string name="cheqian">车前</string>
    <string name="chehou">车后</string>
    <string name="chezuo">车左</string>
    <string name="cheyou">车右</string>
    <string name="wenti_icon">常见问题</string>
    <string name="jiejue_icon">解决之道</string>
    <string name="lantan_icon">什么是澜泰</string>
    <string name="xiadan_icon">下单</string>
    <string name="gongsi_icon">公司介绍</string>
    <string name="xts">美容小贴士</string>
    <string name="downPage">下一页</string>
    <string name="data">data</string>
    <string name="tiaoguo">跳过</string>
    

</resources>