<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/black_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/phototitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@drawable/info_bg" />

            <TextView
                android:id="@+id/phototexttitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/photo"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/photodatepicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/qian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="photoonclick" />
            <ImageView
                android:id="@+id/hou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="photoonclick"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/photodatepicker2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/zuo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="photoonclick" />
            <ImageView
                android:id="@+id/you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="photoonclick" 
                android:layout_marginLeft="30dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/photobtnleft"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="left"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/photobtnreturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/btn01"
                android:onClick="btnreturn"
                android:text="@string/btnreturn" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/photobtnright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="right"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/photobtnnext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn02"
                android:onClick="btnnext"
                android:text="@string/next" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>